LC-wiggle-subsequence [Runtime: N/A; Memory: N/A]